--- a/style.css
+++ b/style.css
@@ -1,11 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
+
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    font-size: 62.5%;
 }
 
 body {
-    font-family: 'Outfit', sans-serif;
-    font-size: 15px;
+    font-family: 'Outfit' , sans-serif;
+    line-height: 1.2;
     background-color: hsl(212, 45%, 89%);
     display: flex;
     flex-direction: column;
@@ -17,26 +24,31 @@ body {
 .container {
     width: 322px;
     max-width: 100%;
-    height: 500px;
     background-color: hsl(0, 0%, 100%);
     border: none;
     border-radius: 15px;
     padding: 15px;
+    box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.3);
 }
 
 .qr-code {
-    width: 288px;
-    height: 288px;
+    max-width: 100%;
     border-radius: 15px;  
 }
 
-h2 {
+h1 {
     color: hsl(218, 44%, 22%);
     text-align: center;
+    font-weight: 700;
+    width: 90%;
+    margin: 1em auto;
 }
 
 p {
-    font-size: 15px;
+    font-size: 1.5rem;
     color: hsl(220, 15%, 55%);
     text-align: center;
+    font-weight: 400;
+    width: 90%;
+    margin: 0 auto 1em auto;
 }
